--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ header {
 
 .star {
     color: orange;
-    font-size: 24px; /* Velikost hvězdy */
-    margin: 0 15px; /* Mezera okolo hvězdy */
+    font-size: 24px;
+    margin: 0 15px;
 }
 
 .nav-buttons {
@@ -32,7 +32,7 @@ header {
 }
 
 .nav-button:hover {
-    color: orange; /* Změna barvy při najetí */
+    color: orange;
 }
 
 .main-content {
@@ -44,14 +44,7 @@ header {
 
 .main-content h1 {
     margin: 0;
-    font-size: 36px; /* Velikost nadpisu Visual Designer */
-}
-
-.main-content h2 {
-    margin: 10px 0 30px;
-    font-size: 36px; /* Stejná velikost jako h1 */
-    color: white; /* Stejná barva jako h1 */
-    opacity: 0.7; /* Oproti hlavnímu nadpisu */
+    font-size: 36px;
 }
 
 .contact-button {
@@ -66,12 +59,14 @@ header {
     align-items: center;
     justify-content: center;
     transition: background-color 0.3s;
+    margin: 0 auto;
 }
 
 .contact-button:hover {
-    background-color: darkorange; /* Změna barvy při najetí */
+    background-color: darkorange;
 }
 
 .arrow {
     margin-left: 10px;
+    color: white;
 }
